--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <style>
     @media screen and (max-width:767px){
       body{ background-color: #8ACE00; }
-      h1,p{ font: black;}
+      h1,p{color: black;}
+
     }
     @media screen and (max-width:960px){
       body{ background-color: black;  }
-      h1,p{ font: #8ACE00;}
+      h1,p{ color: #8ACE00;}
     }
   </style>
 </head>
